092_lls/grade.txt
Grading at 11/23/2023:07:41:39.628937
For commit ID 3c30dec31d3907add01f33d9a907362d71e6eaf8
Grading at Thu Nov 23 02:41:39 AM EST 2023
-----------------------------------------------
testcase 1 : Testing with LinkedList<int>
...compiling...
In file included from tester.cpp:1:
ll.hpp: In instantiation of ‘LinkedList<T>& LinkedList<T>::operator=(const LinkedList<T>&) [with T = int]’:
tester.cpp:94:11:   required from here
ll.hpp:55:9: error: ‘swap’ was not declared in this scope, and no declarations were found by argument-dependent lookup at the point of instantiation [-fpermissive]
   55 |     swap(head, temp.head);
      |     ~~~~^~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/11/string:55,
                 from /usr/include/c++/11/bits/locale_classes.h:40,
                 from /usr/include/c++/11/bits/ios_base.h:41,
                 from /usr/include/c++/11/ios:42,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from tester.cpp:3:
/usr/include/c++/11/bits/basic_string.h:6493:5: note: ‘template<class _CharT, class _Traits, class _Alloc> void std::swap(std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&)’ declared here, later in the translation unit
 6493 |     swap(basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~
In file included from tester.cpp:1:
ll.hpp:56:9: error: ‘swap’ was not declared in this scope, and no declarations were found by argument-dependent lookup at the point of instantiation [-fpermissive]
   56 |     swap(tail, temp.tail);
      |     ~~~~^~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/11/string:55,
                 from /usr/include/c++/11/bits/locale_classes.h:40,
                 from /usr/include/c++/11/bits/ios_base.h:41,
                 from /usr/include/c++/11/ios:42,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from tester.cpp:3:
/usr/include/c++/11/bits/basic_string.h:6493:5: note: ‘template<class _CharT, class _Traits, class _Alloc> void std::swap(std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&)’ declared here, later in the translation unit
 6493 |     swap(basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with LinkedList<std::string>
...compiling...
In file included from tester.cpp:1:
ll.hpp: In instantiation of ‘LinkedList<T>& LinkedList<T>::operator=(const LinkedList<T>&) [with T = std::__cxx11::basic_string<char>]’:
tester.cpp:94:11:   required from here
ll.hpp:55:9: error: ‘swap’ was not declared in this scope, and no declarations were found by argument-dependent lookup at the point of instantiation [-fpermissive]
   55 |     swap(head, temp.head);
      |     ~~~~^~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/11/string:55,
                 from /usr/include/c++/11/bits/locale_classes.h:40,
                 from /usr/include/c++/11/bits/ios_base.h:41,
                 from /usr/include/c++/11/ios:42,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from tester.cpp:3:
/usr/include/c++/11/bits/basic_string.h:6493:5: note: ‘template<class _CharT, class _Traits, class _Alloc> void std::swap(std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&)’ declared here, later in the translation unit
 6493 |     swap(basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~
In file included from tester.cpp:1:
ll.hpp:56:9: error: ‘swap’ was not declared in this scope, and no declarations were found by argument-dependent lookup at the point of instantiation [-fpermissive]
   56 |     swap(tail, temp.tail);
      |     ~~~~^~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/11/string:55,
                 from /usr/include/c++/11/bits/locale_classes.h:40,
                 from /usr/include/c++/11/bits/ios_base.h:41,
                 from /usr/include/c++/11/ios:42,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from tester.cpp:3:
/usr/include/c++/11/bits/basic_string.h:6493:5: note: ‘template<class _CharT, class _Traits, class _Alloc> void std::swap(std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&)’ declared here, later in the translation unit
 6493 |     swap(basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with LinkedList<(a custom class we wrote)>
...compiling...
In file included from tester.cpp:1:
ll.hpp: In instantiation of ‘LinkedList<T>& LinkedList<T>::operator=(const LinkedList<T>&) [with T = Tester]’:
tester.cpp:94:11:   required from here
ll.hpp:55:9: error: ‘swap’ was not declared in this scope, and no declarations were found by argument-dependent lookup at the point of instantiation [-fpermissive]
   55 |     swap(head, temp.head);
      |     ~~~~^~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/11/string:55,
                 from /usr/include/c++/11/bits/locale_classes.h:40,
                 from /usr/include/c++/11/bits/ios_base.h:41,
                 from /usr/include/c++/11/ios:42,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from tester.cpp:3:
/usr/include/c++/11/bits/basic_string.h:6493:5: note: ‘template<class _CharT, class _Traits, class _Alloc> void std::swap(std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&)’ declared here, later in the translation unit
 6493 |     swap(basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~
In file included from tester.cpp:1:
ll.hpp:56:9: error: ‘swap’ was not declared in this scope, and no declarations were found by argument-dependent lookup at the point of instantiation [-fpermissive]
   56 |     swap(tail, temp.tail);
      |     ~~~~^~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/11/string:55,
                 from /usr/include/c++/11/bits/locale_classes.h:40,
                 from /usr/include/c++/11/bits/ios_base.h:41,
                 from /usr/include/c++/11/ios:42,
                 from /usr/include/c++/11/ostream:38,
                 from /usr/include/c++/11/iostream:39,
                 from tester.cpp:3:
/usr/include/c++/11/bits/basic_string.h:6493:5: note: ‘template<class _CharT, class _Traits, class _Alloc> void std::swap(std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&)’ declared here, later in the translation unit
 6493 |     swap(basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~
The code did not compile.  This test failed.

Overall Grade: F
